# Integrated-agent

./: README.md  install.bat
Integrated_agent/: pyproject.toml  start.bat  stop.bat
Integrated_agent/.cursor/rules/nat-setup/: nat-toolkit-installation.mdc
Integrated_agent/ci/scripts/: run_ci_local.sh
Integrated_agent/configs/: calculator.yml  hackathon_config.yml
Integrated_agent/custom_tools/news_summary/: pyproject.toml
Integrated_agent/custom_tools/news_summary/src/news_summary/: news_summary_function.py  register.py
Integrated_agent/custom_tools/news_summary/src/news_summary/configs/: config.yml
Integrated_agent/docker/: Dockerfile
Integrated_agent/docs/source/quick-start/: installing.md
Integrated_agent/docs/source/tutorials/: create-a-new-workflow.md
Integrated_agent/examples/MCP/simple_calculator_mcp/: pyproject.toml
Integrated_agent/examples/advanced_agents/profiler_agent/: pyproject.toml
Integrated_agent/examples/evaluation_and_profiling/email_phishing_analyzer/: Dockerfile  pyproject.toml
Integrated_agent/examples/frameworks/agno_personal_finance/: Dockerfile  pyproject.toml
Integrated_agent/examples/frameworks/multi_frameworks/: pyproject.toml
Integrated_agent/examples/getting_started/simple_calculator/: Dockerfile
Integrated_agent/examples/getting_started/simple_web_query/: Dockerfile
Integrated_agent/examples/notebooks/first_search_agent/: pyproject.toml
Integrated_agent/examples/notebooks/retail_sales_agent/: pyproject.toml
Integrated_agent/examples/observability/redact_pii/: pyproject.toml
(+5 files in other folders)
